# CoreLM

./: .gitignore  CLAUDE.md  LICENSE  Package.swift  README.md  build.sh
Resources/: AppIcon.icns
Sources/CoreLM/: CoreLM.swift
Sources/CoreLM/App/: AppState.swift
Sources/CoreLM/Core/Engine/: GGUFImporter.swift  NativeEngine.swift
Sources/CoreLM/Models/: AppModels.swift
Sources/CoreLM/Services/: PersistenceService.swift
Sources/CoreLM/UI/: ContentView.swift
Sources/CoreLM/Utils/: SystemMonitor.swift
Tests/CoreLMTests/: CoreLMTests.swift
apps/CoreLMApp/: Package.swift
apps/CoreLMApp/Resources/: CoreLM.entitlements  CoreLM.icns  Info.plist
apps/CoreLMApp/Sources/: ContentView.swift  CoreLMApp.swift
docs/architecture/: ARCHITECTURE.md  MODULE_DEPENDENCIES.md
docs/benchmarks/: BENCHMARK_PLAN.md
docs/engine/: ENGINE_API_BOUNDARY.md  MODEL_FAMILY_DECISION.md  QUANTIZATION_FORMAT_DECISION.md
docs/ui/: SCREEN_TREE.md
engine/: CMakeLists.txt  Makefile
engine/c_api/: corelm_api.cpp
engine/core/backends/: backend.cpp  backend.h
engine/core/backends/cpu/: cpu_ops.cpp  cpu_ops.h
engine/core/backends/metal/: metal_backend.h  metal_backend.mm
engine/core/kv_cache/: kv_cache.cpp  kv_cache.h
engine/core/model/: dequant.cpp  dequant.h  gguf.cpp  gguf.h  model_config.cpp  model_config.h  tokenizer.cpp  tokenizer.h
engine/core/runtime/: llama.cpp  llama.h
engine/core/sampling/: sampler.cpp  sampler.h
engine/core/tensor/: tensor.cpp  tensor.h
engine/metal/: kernels.metal
engine/tests/: test_main.cpp
scripts/: build-app.sh
(+45 files in other folders)
